# gring-go

./: .gitignore  Gantt_Gring-go.gan  README.md  apagnan.txt
DOC/: Avancement - PT401.md  Cahier des charges.md  Component-Analysis.md  Consumption-Gring-Go.xlsx  Demande-Achat.md  Gantt_Gring-go.gan  Heures Marius.txt  Ring.md  Tasks.md
DOC/IMAGES/: Diagram synopsys.drawio
HARDWARE/BPM-Module/: BPM-Module.kicad_pcb  BPM-Module.kicad_prl  BPM-Module.kicad_pro  BPM-Module.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~BPM-Module.kicad_sch.lck
HARDWARE/BPM-Module/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
HARDWARE/Gringo/: Gringo.kicad_pcb  Gringo.kicad_prl  Gringo.kicad_pro  Gringo.kicad_sch  Snapeda.kicad_sym  bpm-module.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~Gringo.kicad_sch.lck  ~_autosave-Gringo.kicad_pcb.lck
HARDWARE/Gringo/Snapeda.pretty/: IC_BQ500212ARGZT.kicad_mod
HARDWARE/Gringo/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
HARDWARE/LIB/ul_BQ500212ARGZT/KiCADv6/: 2025-12-19_09-33-36.kicad_sym
HARDWARE/LIB/ul_BQ51013ARHLR/KiCADv6/: 2025-12-19_10-44-28.kicad_sym
HARDWARE/LIB/ul_ECS-327-12-5-12-TR/KiCADv6/: 2025-12-19_16-57-16.kicad_sym
HARDWARE/LIB/ul_MAX30101EFD-/KiCADv6/: 2025-10-07_13-02-32.kicad_sym
HARDWARE/LIB/ul_MAX32664GTGA-T/KiCADv6/: 2025-12-19_09-05-25.kicad_sym
HARDWARE/LIB/ul_MAX32664GWEA-T-seq/KiCADv6/: 2025-10-07_15-12-44.kicad_sym
HARDWARE/LIB/ul_MAX32664GWEA-T/KiCADv6/: 2025-10-07_13-04-02.kicad_sym
HARDWARE/LIB/ul_PAM2401YPADJ/KiCADv6/: 2025-10-07_13-09-24.kicad_sym
HARDWARE/LIB/ul_PTPS7A2018PDBVR/KiCADv6/: 2025-10-07_14-09-04.kicad_sym
SOFTWARE/ANDROID/Gringgo/: settings.gradle.kts
SOFTWARE/ANDROID/Gringgo/app/: build.gradle.kts
SOFTWARE/EMBEDDED/app/: CMakeLists.txt  app.overlay  prj.conf
SOFTWARE/EMBEDDED/app/drivers/: bio_driver.c  charge_driver.c  haptic_driver.c  imu_driver.c  temp_driver.c
SOFTWARE/EMBEDDED/app/include/: bio_driver.h  charge_driver.h  gringgo_status.h  gringgo_types.h  haptic_driver.h  imu_driver.h  temp_driver.h
SOFTWARE/EMBEDDED/doc/: archi.puml  function_prototypes.md
SOFTWARE/EMBEDDED/sample/: main.c
(+46 files in other folders)
